--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.18.0",
     "element-ui": "^2.4.11",
     "es6-promise": "^4.2.5",
+    "lodash": "^4.17.11",
     "moment": "^2.23.0",
     "normalize.css": "^8.0.1",
     "promise.prototype.finally": "^3.1.0",
