--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "deploy": "node build/build.js; rm -rf ../amorphous_node/public/*; cp -rf dist/* ../amorphous_node/public"
   },
   "dependencies": {
     "axios": "^0.18.0",
