--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "build": "node build/build.js",
     "deploy": "node build/build.js; rm -rf ../amorphous_node/public/*; cp -rf dist/* ../amorphous_node/public"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/BigKongfuPanda/amorphous_vue.git"
+  },
   "dependencies": {
     "axios": "^0.18.0",
     "element-ui": "^2.4.11",
