--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "build": "node build/build.js",
-    "deploy": "node build/build.js; rm -rf ../amorphous_node/public/*; cp -rf dist/* ../amorphous_node/public"
+    "deploy": "node build/build.js&& rm -rf ../amorphous_node/public/*&& cp -rf dist/* ../amorphous_node/public"
   },
   "repository": {
     "type": "git",
