--- a/.babelrc
+++ b/.babelrc
@@ -11,5 +11,16 @@
     ],
     "stage-2"
   ],
-  "plugins": ["transform-vue-jsx", "transform-runtime", "syntax-dynamic-import"]
+  "plugins": [
+    "transform-vue-jsx",
+    "transform-runtime",
+    "syntax-dynamic-import",
+    [
+      "component",
+      {
+        "libraryName": "element-ui",
+        "styleLibraryName": "theme-chalk"
+      }
+    ]
+  ]
 }
