--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "element-ui": "^2.14.0",
     "es6-promise": "^4.2.5",
     "lodash": "^4.17.14",
+    "mint-ui": "^2.2.13",
     "moment": "^2.23.0",
     "normalize.css": "^8.0.1",
     "promise.prototype.finally": "^3.1.0",
