--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "url": "https://github.com/BigKongfuPanda/amorphous_vue.git"
   },
   "dependencies": {
+    "@chenfengyuan/vue-qrcode": "^1.0.2",
     "axios": "^0.18.0",
     "element-ui": "^2.14.0",
     "es6-promise": "^4.2.5",
